<resources>
    <string name="app_name">PerezMedel_Beatriz_Act1_Calculadora</string>
    <string name="textOperation">""</string>
    <string name="texResult">""</string>
    <string name="btn_restart">C</string>
    <string name="btn_rest">%</string>
    <string name="btn_division">÷</string>
    <string name="btn_sum">+</string>
    <string name="btn_substract">-</string>
    <string name="btn_mult">x</string>
    <string name="btn_result">=</string>
    <string name="btn_zero">0</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_squared">x²</string>
    <string name="btn_cos">cos</string>
    <string name="btn_sin">sin</string>
    <string name="btn_tangent">tan</string>
</resources>